# HeisenBot

./: .replit  PRICING_UPDATE.md  README.md  SETUP_INSTRUCTIONS.md  bin_data_loader.py  binlist.txt  config_setup.py  constants.py  error.txt  keep_alive.py  main.py  main_complete.py  pyproject.toml  replit.md  requirements.txt  run.py  setup_personal_details.py  start.sh  uptimerobot.py  web_interface.py  worker_launcher.py
attached_assets/: Pasted-376000-American-Express-GREEN-x6-401795-NAB-x14-404137-Greater-Building-Society-x6-405221--1751561749379_1751561749379.txt  Pasted-439744-9686-06-2026-Clarke-Clarke-E14-03-23-1983-439744-4161-04-2028-Stewart-Stewart-M60-1-1751559585895_1751559585898.txt  Pasted-494120-HSBC-Gold-Credit-454361-HSBC-Gold-Credit-465950-HSBC-Premium-x2-465944-HSBC-4659-1751562534269_1751562534270.txt  Pasted-import-telebot-from-telebot-import-types-import-openpyxl-from-constants-import-API-KEY-001-adminpa-1751544151812_1751544151813.txt  full_au_bin_list_2026_plus_postcode_1751561897643.txt  main_1751516294734.py  updated_uk_bin_list_2026_postcode_1751562623225.txt
base1/: fullz1.txt
base10/: fullz10.txt
base11/: fullz11.txt
base2/: fullz2.txt
base3/: fullz3.txt
base4/: fullz4.txt
base5/: fullz5.txt
base6/: fullz6.txt
base7/: fullz7.txt
data/: cvv_data.json  dumps_data.json  fullz_bases.json
static/: script.js  style.css
templates/: activity.html  index.html  login.html  transactions.html  users.html
