[project]
name = "heisenberg-store-bot"
version = "0.1.0"
description = "Telegram store bot"
requires-python = ">=3.11,<4.0"

dependencies = [
    "arg>=0.0.1",
    "bitcoin>=1.1.42",
    "block-io>=2.0.6",
    "flask>=3.1.1",
    "forex-python>=1.9.2",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pytelegrambotapi>=4.27.0",
    "replit>=4.1.2",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
